--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Hello World</h1>
+<DOCTYPE! html>
+<html>
+    <head>
+    <title>
+    portfolio
+    </title>
+    </head>
+
+    <body>
+        <h1>Nico's Portfolio</h1>
+
+        <p>Here are some sexy projects I've (at least mostly) completed</p>
+        <h2></h2>
+        <ul>
+            <li>Lenscribe</li>
+            <li>GameBoy DMG Hardware Emulator</li>
+            <li>Fluorescent Cell Detector</li>
+            <li>BISC Relay Station Communication Protocol</li>
+            <li>Oscilloscope Driver Amplifier</li>
+            <li>Programmable AntiAliasing Filter</li>
+            <li>From Scratch Turntable</li>
+        </ul>
+
+        Here's a lovely movie, this is me learning:
+        <img src="images/Howl's Wallpaper.jpg">
+    </body>
+
+</html>
