adding hyperlinks bbg

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <li>BISC Relay Station Communication Protocol</li>
             <li>Oscilloscope Driver Amplifier</li>
             <li>Programmable AntiAliasing Filter</li>
+            <li><a href="learning.html" target="_blank">learning how to html</a></li>
             <li>From Scratch Turntable</li>
         </ul>
 
-        Here's a lovely movie, this is me learning:
-        <img src="images/Howl's Wallpaper.jpg">
     </body>
 
 </html>
