--- a/bartending.html
+++ b/bartending.html
@@ -7,20 +7,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>AboutMe</title>
+        <title>Bartending</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Nicolas Alarcon</h1>
-        <h2>For my <a href="docs/NicolasAlarcon_2025Resume.pdf">resume</a></h2>
-        <ul>
-            <li><a href="portfolio.html">Here's My Portfolio</a></li>
-            <li><a href="https://www.etsy.com/shop/NicoMakes">Here's My Etsy</a></li>
-            <li><a href="bartending.html"> For Bartending Events or Otherwise</a></li>
-        </ul>
-        
-        
+        <h1>Not Yet Created :( Working on it</h1>
     </body>
 </html>
