--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <body>
         <h1 id="header">Nicolas Alarcon</h1>
 
-        <h3>Here's my <a href="pages/NicolasAlarcon_2025Resume.pdf">resume </a></h3>
         <div style="display: flex;">
 
         <div style="width:50%">
-            <embed src="pages/NicolasAlarcon_2025Resume.pdf" type="application/pdf" alt="Not liking this formal">
-        </div>
+            <embed src="pages/NicolasAlarcon_2025Resume.pdf" type="application/pdf" alt="Not liking this formal" style="width:100%; height:100%">
+            <h3>Here's my <a href="pages/NicolasAlarcon_2025Resume.pdf">resume </a> in pdf form</h3>
+            </div>
 
         <div class="testclass" style="width:50%;">
         <ul>
